tests/NormalTests/paczka1/fuzzy1/52538165.err
Error in line 8: grGoR2- A-9 132,3
Error in line 4: grGoR26 A69 88,2
Error in line 13: S90 S90 -1,7
Error in line 12: S90 S90 30,2
Error in line 5: Go6SO S246 38,1
Error in line 24: S90 S90 9,1
Error in line 26: mDtJCj A69 91,2
Error in line 30: LxM9 S248 86,9
Error in line 29: mDtJCj S248 98,3
